// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiBottomBar is rendered 1`] = `
Array [
  <section
    aria-label="aria-label"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
    Content
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props affordForDisplacement can be false 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props bodyClassName is rendered 1`] = `
<section
  aria-label="Page level controls"
  class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
>
  <h2
    class="ouiScreenReaderOnly"
  >
    Page level controls
  </h2>
</section>
`;

exports[`OuiBottomBar props insert root prop is altered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props insert sibling prop is altered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props landmarkHeading 1`] = `
Array [
  <section
    aria-label="This should have been label"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      This should have been label
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark called This should have been label with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props paddingSize l is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingLarge"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props paddingSize m is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props paddingSize none is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props paddingSize s is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingSmall"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props position fixed is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props position props are altered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
    style="left:30px;right:30px;bottom:30px;top:30px"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props position static is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--static ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props position sticky is rendered 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--sticky ouiBottomBar--paddingMedium"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;

exports[`OuiBottomBar props style is customized 1`] = `
Array [
  <section
    aria-label="Page level controls"
    class="ouiBottomBar ouiBottomBar--fixed ouiBottomBar--paddingMedium"
    style="left:12px"
  >
    <h2
      class="ouiScreenReaderOnly"
    >
      Page level controls
    </h2>
  </section>,
  <p
    aria-live="assertive"
    class="ouiScreenReaderOnly"
  >
    There is a new region landmark with page level controls at the end of the document.
  </p>,
]
`;
